# vio-odometry-codes

./: AGENTS.md  CMakeLists.txt  README.md
config/: config.yaml
include/: cameramodel.h  datareading.h  feature_track.h  featurepoints.h  frame.h  imuvisualalian.h  integration_base.h  parameters.h  solvepose.h  tools.h  vioodometry.h
src/: cameramodel.cpp  datareading.cpp  feature_track.cpp  featurepoints.cpp  frame.cpp  imuintergration.cpp  imuvisualalian.cpp  main.cpp  parameters.cpp  solvepose.cpp  vioodometry.cpp
